syntax = "proto3";

option go_package = "api";

service CoordinatorServer {
  rpc RegisterWorker(RegisterWorkerRequest)  returns (RegisterWorkerResponse) {}
  rpc CreateTask(CreateMapReduceTaskRequest) returns (CreateMapReduceTaskResponse) {}
  rpc QueryTask(QueryTaskRequest) returns(QueryTaskResponse) {}
  rpc ReportMapTaskProgress(ReportMapTaskProgressRequest) returns (ReportMapTaskProgressResponse){}
  rpc ReportReduceTaskProgress(ReportReduceTaskProgressRequest) returns(ReportReduceTaskProgressResponse) {}
}

message RegisterWorkerRequest {
  string address = 1;
}

message RegisterWorkerResponse {
  string id = 1;
  string coordinator_address = 2;
}

message QueryTaskRequest {
  string task_id = 1;
}

message QueryTaskResponse {
  string task_id = 1;
  int32 state = 2;
}

message CreateMapReduceTaskRequest {
  string name = 1;
  repeated string inputs = 2;
  int32  map_size = 3;
  int32 reduce_size = 4;
}

message CreateMapReduceTaskResponse {
  string id = 1;
}

message ReportMapTaskProgressRequest {
  string task_id = 1;
  uint32 id = 2;
  uint32 state = 3;
  map<uint32, string> outputs = 4;
}

message ReportMapTaskProgressResponse {
  bool result = 1;
}

message ReportReduceTaskProgressRequest {
  string task_id = 1;
  uint32 id = 2;
  uint32 state = 3;
  string output = 4;
}

message ReportReduceTaskProgressResponse {
  bool result = 1;
}